Theme changes to work with older android

--- a/KMD/app/src/main/res/values/colors.xml
+++ b/KMD/app/src/main/res/values/colors.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="splash">@color/accent_blue</color>
+
+    <color name="cover_placeholder">#1F888888</color>
+
+    <!-- Default Theme -->
+    <color name="divider_default">@color/md_black_1000_12</color>
+
+    <!-- Blue Theme -->
+<!--    <color name="accent_blue">#54759E</color>-->
+    <color name="accent_blue">#202125</color>
+
+    <!-- AMOLED Mode -->
+    <color name="amoled_background">#000000</color>
+    <color name="amoled_onBackground">#FFFFFF</color>
+    <color name="amoled_surface">#000000</color>
+    <color name="amoled_onSurface">#FFFFFF</color>
+    <color name="amoled_surfaceContainer">#0C0C0C</color>
+    <color name="amoled_surfaceContainerHigh">#131313</color>
+    <color name="amoled_surfaceContainerHighest">#1B1B1B</color>
+
+    <!-- Material Design Colors -->
+    <color name="md_black_1000_12">#1F000000</color>
+    <color name="md_white_1000_12">#1FFFFFFF</color>
+
 </resources>
