--- a/KMD/app/src/main/res/values-night/themes.xml
+++ b/KMD/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,16 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.KMD" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
+    <!--== AMOLED Mode Overlay ==-->
+    <style name="ThemeOverlay.Tachiyomi.Amoled" parent="">
+        <!-- Theme Colors -->
+        <item name="android:colorBackground">@color/amoled_background</item>
+        <item name="colorOnBackground">@color/amoled_onBackground</item>
+        <item name="colorSurface">@color/amoled_surface</item>
+        <item name="colorOnSurface">@color/amoled_onSurface</item>
+        <item name="colorSurfaceContainer">@color/amoled_surfaceContainer</item>
+        <item name="colorSurfaceContainerHigh">@color/amoled_surfaceContainerHigh</item>
+        <item name="colorSurfaceContainerHighest">@color/amoled_surfaceContainerHighest</item>
     </style>
+
 </resources>
