Fix Themes (Not Really)

--- a/KMD/app/src/main/res/values/colors.xml
+++ b/KMD/app/src/main/res/values/colors.xml
@@ -8,8 +8,7 @@
     <color name="divider_default">@color/md_black_1000_12</color>
 
     <!-- Blue Theme -->
-<!--    <color name="accent_blue">#54759E</color>-->
-    <color name="accent_blue">#202125</color>
+    <color name="accent_blue">#54759E</color>
 
     <!-- AMOLED Mode -->
     <color name="amoled_background">#000000</color>
